--- a/templates/profileac.html
+++ b/templates/profileac.html
@@ -6,9 +6,17 @@
     <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
-<div id="header">
-    <h2>プロフィール</h2>
-</div>
+    <div id="header">
+        <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
+      <dev id="header-list">
+      {% if user.is_authenticated %}
+      <a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
+      <a href="/accounts/logout" style="color:white;">ログアウト</a>
+      {% else %}
+      <a href="/mine/profile" style="color:white;">ログイン</a> / 
+      <a href="/accounts/logout" style="color:white;">ログアウト</a>
+      {% endif %}
+      </div>
 <div id="content">
     <p>サーバーへようこそ！{{ user_name }}。</p>
     <p>紐付けされているConfig:</p>
@@ -19,17 +27,5 @@
     <span onmouseover="this.innerText='{{ passw }}'" onmouseout="this.innerText='マウスを載せてパスワードを表示'">マウスを載せてパスワードを表示</span>
 
 </div>
-<div id="sidebar">
-  <h2>リンク</h2>
-  <a href="/mine/help"><p>Help</p></a>
-  <a href="/mine/query"><p>Query </p></a>
-  <a href="/accounts/login"><p>ログイン</p></a>
-  <a href="/accounts/logout"><p>ログアウト</p></a>
-  <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/config"><p>設定</p></a>
-  <a href="/mine/console"><p>コンソールクライアント</p></a>
-  <h2>状態</h2>
-  <p>ログインしているユーザー:{{ user_name }}</p>
-  <a href="/mine/profile"><p>ぷろふぃる</p></a>
-</div>
+{% include "sidebar.html" %}
 </body>
