--- a/templates/script.html
+++ b/templates/script.html
@@ -12,20 +12,8 @@
 <div id="content">
     <p>サイトに書かれているスクリプトを実行します</p>
     <h2>{{ script }}</h2>
-    <p>{{ script_field }}</p>
-    <tt>{{ re }}</tt>
+    <p>>>> {{ script_field }}</p>
+    <p>{{ re }}</p>
 </div>
-<div id="sidebar">
-  <h2>リンク</h2>
-  <a href="/mine/help"><p>Help</p></a>
-  <a href="/mine/query"><p>Query </p></a>
-  <a href="/accounts/login"><p>ログイン</p></a>
-  <a href="/accounts/logout"><p>ログアウト</p></a>
-  <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/code"><p>コードの設定</p></a>
-  <a href="/mine/console"><p>コンソールクライアント</p></a>
-  <h2>状態</h2>
-  <p>ログインしているユーザー:{{ user_name }}</p>
-  <a href="/mine/profile"><p>ぷろふぃる</p></a>
-</div>
+{% include "sidebar.html" %}
 </body>
