--- a/templates/scriptindex.html
+++ b/templates/scriptindex.html
@@ -5,34 +5,29 @@
     <meta charset="utf-8"/>
     <title>スクリプト選択</title>
     <link href="/static/style.css" rel="stylesheet">
+    <style>
+        #on {
+        border-bottom: 2px solid #dee7ec;
+        }
+    </style>
 </head>
 <body>
 <div id="header">
     <h2>スクリプト選択</h2>
 </div>
 <div id="content">
+    <h2 id="on">スクリプトの一覧</h2>
     {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="/mine/script/{{ question.id }}/">{{ question.script_name }}</a>:<p>{{ question.script }}</p></li>
+        <li><a href="/mine/script/{{ question.id }}/" style="color:white;">{{ question.script_name }}</a>:<a href="/mine/script/{{ question.id }}/delete" style="color:red;">削除</a>/<a href="/mine/script/edit/{{ question.id }}" style="color:greenyellow;">編集</a><p>{{ question.script }}</p></li>
     {% endfor %}
     </ul>
   {% else %}
-    <p>Code</p>
+    <p>ここには何もないようだ....</p>
 {% endif %}
+<h3><a href="/mine/script_c/" style="color:white;">スクリプトの追加...</a></h3>
 {{ debug }}
 </div>
-<div id="sidebar">
-  <h2>リンク</h2>
-  <a href="/mine/help"><p>Help</p></a>
-  <a href="/mine/query"><p>Query </p></a>
-  <a href="/accounts/login"><p>ログイン</p></a>
-  <a href="/accounts/logout"><p>ログアウト</p></a>
-  <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/code"><p>コードの設定</p></a>
-  <a href="/mine/console"><p>コンソールクライアント</p></a>
-  <h2>状態</h2>
-  <p>ログインしているユーザー:{{ user_name }}</p>
-  <a href="/mine/profile"><p>ぷろふぃる</p></a>
-</div>
+{% include "sidebar.html" %}
 </body>
