--- a/templates/helppage.html
+++ b/templates/helppage.html
@@ -15,7 +15,18 @@
         <a href="/accounts/logout" style="color:white;">ログアウト</a>
         {% endif %}
         </div>
-<div id="content">
+<div id="content" style="
+    font-family: 'Avenir Next';
+    float:left;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    position:absolute;
+    top:80px;
+    right:420px;
+    left:10px;
+    opacity: 0.9; 
+  ">
     <h3>へるぷぺぇじ</h3>
     
 {{ debug }}
