--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,8 +1,8 @@
 <div id="sidebar">
     <h2>リンク</h2>
-    <a href="/mine/help"><p>Help</p></a>
-    <a href="/mine/query"><p>Query </p></a>
-    <a href="/mine/script"><p>スクリプトの実行</p></a>
-    <a href="/mine/config"><p>設定</p></a>
-    <a href="/mine/console"><p>コンソールクライアント</p></a>
+    <a href="/mine/help" style="color:white;"><p>Help</p></a>
+    <a href="/mine/query" style="color:white;"><p>Query </p></a>
+    <a href="/mine/script" style="color:white;"><p>スクリプトの実行</p></a>
+    <a href="/mine/config" style="color:white;"><p>設定</p></a>
+    <a href="/mine/console" style="color:white;"><p>コンソールクライアント</p></a>
 </div>
