--- a/static/style.css
+++ b/static/style.css
@@ -15,10 +15,10 @@ body{
     top:100px;
   }
   #content {
+    font-family: "Avenir Next";
     float:left;
     background-color: black;
     color: white;
-    font-family: "Press Start 2P";
     font-size: 12px;
     position:absolute;
     top:100px;
@@ -28,7 +28,7 @@ body{
   }
   #header {
     font-family: "Avenir Next";
-    height:40px;
+    height:90px;
     width:100%;
     padding:10px 20px 10px 20px;
     position: fixed;
