--- a/templates/console2.html
+++ b/templates/console2.html
@@ -2,20 +2,25 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> 
+    <link rel="stylesheet" href="/static/bootstrap.css">   
     <link href="/static/style.css" rel="stylesheet">
     <meta charset="utf-8"/>
     <title>コンソールクライアント</title>
 </head>
 <body>
-<div id="header">
-  <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
-<dev id="header-list">
-<a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
-<a href="/accounts/logout" style="color:white;">ログアウト</a>
-
-</div>
-<div id="content">
+{% include "header.html" %}
+<div id="content" style="
+    float:left;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    position:absolute;
+    top:80px;
+    right:420px;
+    left:10px;
+    opacity: 0.9; 
+  ">
     <ul>
     <form method="post" action="{% url 'submit' %}">
     {% csrf_token %}
