--- a/templates/helppage.html
+++ b/templates/helppage.html
@@ -5,23 +5,20 @@
     <title>HelpPage</title>
     <link href="/static/style.css" rel="stylesheet">
 </head>
-<body>
-    <dev id="header-list">
-        {% if user.is_authenticated %}
-        <a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
-        <a href="/accounts/logout" style="color:white;">ログアウト</a>
-        {% else %}
-        <a href="/mine/profile" style="color:white;">ログイン</a> / 
-        <a href="/accounts/logout" style="color:white;">ログアウト</a>
-        {% endif %}
-        </div>
+<div id="header">
+    <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
+  <dev id="header-list">
+  {% if user.is_authenticated %}
+  <a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
+  <a href="/accounts/logout" style="color:white;">ログアウト</a>
+  {% else %}
+  <a href="/mine/profile" style="color:white;">ログイン</a> / 
+  <a href="/accounts/logout" style="color:white;">ログアウト</a>
+  {% endif %}
+  </div>
 <div id="content">
     <h3>へるぷぺぇじ</h3>
-    
-{{ debug }}
+    <p>readme読めよ。</p>
 </div>
 {% include "sidebar.html" %}
-<script>
-document.getElementById("box1").focus();
-</script>
 </body>
