--- a/templates/query.html
+++ b/templates/query.html
@@ -29,7 +29,7 @@
       <div style="background-color: black;color: white;">
       </div>
       <h3 style="font-size:20px;">結果</h3>
-      <table border="1">
+      <table border="1" class="table" style="color:white;width:500px;height:100px;">
         <tr style="background-color:gray;">
           <th>名前</th>
           <th>項目</th>
