--- a/templates/console2.html
+++ b/templates/console2.html
@@ -11,6 +11,7 @@
 <body>
 {% include "header.html" %}
 <div id="content" style="
+    font-family: 'Press Start 2P';
     float:left;
     background-color: black;
     color: white;
