--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <body>
 {% include "header.html" %}
 <div id="content" style="
-    font-family: 'Avenir Next';
+    font-family: 'YuGothB.ttc';
     float:left;
     background-color: black;
     color: white;
