--- a/templates/profileac.html
+++ b/templates/profileac.html
@@ -8,7 +8,7 @@
 </head>
 {% include "header.html" %}
 <div id="content" style="
-    font-family: 'Avenir Next';
+    font-family: 'YuGothB.ttc';
     float:left;
     background-color: black;
     color: white;
