--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar">
+<div id="sidebar" style="font-family: 'YuGothB.ttc';">
     <h2>リンク</h2>
     <a href="/mine/help" style="color:white;"><p>Help</p></a>
     <a href="/mine/query" style="color:white;"><p>Query </p></a>
