--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <div id="header" style="
-    font-family: 'Avenir Next';
+    font-family: 'YuGothB.ttc';
     height:70px;
     width:100%;
     padding:10px 20px 10px 20px;
@@ -12,7 +12,7 @@
     float: left;
     padding:15px;">
   <dev id="header-logo" style="
-    font-family: 'Avenir Next';
+    font-family: 'YuGothB.ttc';
     float: left;
     text-align: center;
 ">
