--- a/templates/console2.html
+++ b/templates/console2.html
@@ -21,6 +21,7 @@
     right:420px;
     left:10px;
     opacity: 0.9; 
+    padding:10px;
   ">
     <ul>
     <form method="post" action="{% url 'submit' %}">
