--- a/templates/helppage.html
+++ b/templates/helppage.html
@@ -3,6 +3,7 @@
 <head>  
     <meta charset="utf-8"/>
     <title>HelpPage</title>
+    <link rel="stylesheet" href="/static/bootstrap.css">
     <link href="/static/style.css" rel="stylesheet">
 </head>
 <body>
@@ -18,6 +19,7 @@
     right:420px;
     left:10px;
     opacity: 0.9; 
+    padding:10px;
   ">
     <h3>へるぷぺぇじ</h3>
     <p>Readme読めよ。</p>
