--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
     right:420px;
     left:10px;
     opacity: 0.9; 
-  ">
+    padding:10px;
+    ">
     <h1 id="djnagominecraftrcon" style="font-size:30px;">DjnagoMinecraftRcon</h1>
     <p> DjangoからMinecraftを制御します。</p>
     <h1 id="機能" style="font-size:30px;">機能</h1>
