--- a/templates/profileac.html
+++ b/templates/profileac.html
@@ -17,7 +17,8 @@
     top:80px;
     right:420px;
     left:10px;
-    opacity: 1.0; 
+    opacity: 1.0;
+    padding:10px;
   ">
     <p>サーバーへようこそ！{{ user_name }}。</p>
     <p>紐付けされているConfig:</p>
