--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,22 +2,26 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8"/>
-    <title>Query</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="/static/bootstrap.css">
     <link href="/static/style.css" rel="stylesheet">
+    
 </head>
 <body>
-    <div id="header">
-        <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
-      <dev id="header-list">
-      {% if user.is_authenticated %}
-      <a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
-      <a href="/accounts/logout" style="color:white;">ログアウト</a>
-      {% else %}
-      <a href="/mine/profile" style="color:white;">ログイン</a> / 
-      <a href="/accounts/logout" style="color:white;">ログアウト</a>
-      {% endif %}
-      </div>
-<div id="content">
+{% include "header.html" %}
+<div id="content"  style="
+    font-family: 'YuGothB.ttc';
+    float:left;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    position:absolute;
+    top:80px;
+    right:420px;
+    left:10px;
+    opacity: 0.9; 
+    padding:10px;
+    ">
     {% if form.errors %}
     <p style="color: red;">ユーザー名とパスワードが一致しません。</p>
 {% endif %}
