--- a/templates/code_page.html
+++ b/templates/code_page.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>  
     <meta charset="utf-8"/>
     <title>設定</title>
+    <link rel="stylesheet" href="/static/bootstrap.css">
     <link href="/static/style.css" rel="stylesheet">
     <style>
         #box5{
@@ -24,35 +24,32 @@
     </style>
 </head>
 <body>
-    <div id="header">
-        <dev id="header-logo"><h2><a href="/mine/" style="color:white;">Home</a></h2></dev>
-      <dev id="header-list">
-      <a href="/mine/profile" style="color:white;">{{ request.user }}</a> / 
-      <a href="/accounts/logout" style="color:white;">ログアウト</a>
-</div>
-<div id="content">
+{% include "header.html" %}
+<div id="content" style="
+    font-family: 'YuGothB.ttc';
+    float:left;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    position:absolute;
+    top:80px;
+    right:420px;
+    left:10px;
+    opacity: 0.9; 
+    padding:10px;
+    ">
     <form method="post" action="{% url 'submit6' %}">
     {% csrf_token %}
-    <h2>Server config</h2>
-    <h3>Server Overview</h3>
-    <p>Server Name:<input id="box1" type="text" value="{{ name }}" name="name"></p>
-    <h3>Server Data</h3>
-    <p>Server IP:<input id="box2" type="text" value="{{ code }}" name="code"></p>
-    <p>Server Query Port:<input id="box3" type="checkbox" value="{{ inter }}" name="active"></p>
-    <p>Server Rcon Port:<input id="box4" type="text" value="{{ inter }}" name="inter"></p>
-    <input style="width:200px;padding:20px;font-size:18px;border:1px solid #dee7ec;" id="box5" type="submit" value="Save">
+    <h3>Code config</h3>
+    <div class="input-group" style="width:300px;margin: 10px;"><span class="input-group-text" id="basic-addon1">Name</span><input id="box1" type="text" value="{{ name }}" name="name" class="form-control"></div>
+    <div class="input-group" style="width:300px;margin: 10px;"><span class="input-group-text" id="basic-addon1">Code</span><input id="box2" type="text" value="{{ code }}" name="code" class="form-control"></div>
+    <div class="input-group" style="width:300px;margin: 10px;"><span class="input-group-text" id="basic-addon1">Interval</span><input id="box4" type="text" value="{{ inter }}" name="inter" class="form-control"></div>
+    <input class="btn btn-primary" type="submit" value="Save" style="margin: 10px;">
     </form>
 {{ debug }}
 </div>
-<div id="sidebar">
-  <h2>リンク</h2>
-  <a href="/mine/help"><p>Help</p></a>
-  <a href="/mine/query"><p>Query </p></a>
-  <a href="/mine/script"><p>スクリプトの実行</p></a>
-  <a href="/mine/config"><p>設定</p></a>
-  <a href="/mine/console"><p>コンソールクライアント</p></a>
-</div>
+{% include "sidebar.html" %}
 <script>
 document.getElementById("box1").focus();
 </script>
-</body>
+</bod
