--- a/templates/script_page2.html
+++ b/templates/script_page2.html
@@ -35,16 +35,21 @@
     top:80px;
     right:420px;
     left:10px;
-    opacity: 0.9; 
+    opacity: 0.9;
   ">
-    <form method="post" action="{% url 'submit4' id %}">
+    <form method="post" action="{% url 'submit3' %}">
     {% csrf_token %}
-    <h2>Create script</h2>
+    <h2>Editting script</h2>
     <h3>Setting</h3>
-    <p>Name:<input id="box1" type="text" name="name" value="{{ name }}"></p>
-    Script:<textarea name="com" style="height: 300px;width:400px;">{{ scripts }}</textarea><br>
-    <input style="width:100px;padding:20px;font-size:18px;border:1px solid #dee7ec;" id="box5" type="submit" value="Save">
-    </form>
+    <div class="input-group" style="width:300px;margin: 10px;">
+        <span class="input-group-text" id="basic-addon1">Name</span><input id="box2" type="text" value="{{ name }}" name="name" class="form-control">
+    </div>
+    <div class="form-group" style="width:300px;margin: 10px;">
+        <span class="input-group-text" id="basic-addon1" style="width:600px;">Script</span>
+        <textarea name="com" style="height: 200px;width:600px;" class="form-control" id="exampleFormControlTextarea1" rows="3">{{ scripts }}</textarea>
+  </div>
+  <input class="btn btn-primary" type="submit" value="Save" style="margin: 10px;">
+</form>
 {{ debug }}
 </div>
 {% include "sidebar.html" %}
